<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:prefixText="@string/currency_symbol">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/billAmount"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/bill_amount"
            android:inputType="number|numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toStartOf="@+id/space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:suffixText="@string/percent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tipPercent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:hint="@string/tip_percent"
            android:inputType="none"
            android:text="@string/default_tip"
            tools:text="@string/default_tip" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/increaseTip"
        android:layout_width="71dp"
        android:layout_height="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/decreaseTip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout2"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <ImageButton
        android:id="@+id/decreaseTip"
        android:layout_width="73dp"
        android:layout_height="31dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <Space
        android:id="@+id/space"
        android:layout_width="12dp"
        android:layout_height="61dp"
        android:layout_marginEnd="4dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toStartOf="@+id/increaseTip"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="367dp"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:prefixText="@string/currency_symbol">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tipAmount"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:hint="@string/tip_amount" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="367dp"
        android:layout_height="62dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:prefixText="@string/currency_symbol">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/totalAmount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/total_Amount" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/calculate"
        android:layout_width="359dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/calc_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

</androidx.constraintlayout.widget.ConstraintLayout>